<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CandidateDetails"
    android:background="@drawable/goldbutton">

    <TextView
        android:id="@+id/main"
        android:textColor="@color/common_border_color"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="Ticket Details"
        android:background="@drawable/gradient2"
        android:textAlignment="center"
        android:textSize="40dp" />

    <TextView
        android:id="@+id/detail1"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/main"
        android:layout_marginTop="10dp"
        android:text="@string/username"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail11"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail1"
        android:layout_below="@+id/main"
        android:layout_marginTop="10dp"
        android:textColor="#424242"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail2"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail1"
        android:layout_marginTop="10dp"
        android:text="@string/userage"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail22"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail2"
        android:layout_below="@+id/detail1"
        android:layout_marginTop="10dp"
        android:textColor="#424242"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail3"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail2"
        android:layout_marginTop="10dp"
        android:text="@string/usermobileno"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail33"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail3"
        android:layout_below="@+id/detail2"
        android:layout_marginTop="10dp"
        android:textColor="#424242"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail4"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail3"
        android:layout_marginTop="10dp"
        android:text="@string/typeticket"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail44"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail4"
        android:layout_below="@+id/detail3"
        android:layout_marginTop="10dp"
        android:textColor="#424242"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail5"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail4"
        android:layout_marginTop="10dp"
        android:text="@string/typeservice"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail55"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail5"
        android:layout_below="@+id/detail4"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail6"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail5"
        android:layout_marginTop="10dp"
        android:text="@string/departure"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail66"
        android:layout_width="180dp"
        android:layout_height="80dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail6"
        android:layout_below="@+id/detail5"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail7"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail6"
        android:layout_marginTop="10dp"
        android:text="@string/arrival"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail77"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail7"
        android:layout_below="@+id/detail6"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail8"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail7"
        android:layout_marginTop="10dp"
        android:text="@string/datebook"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail88"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail8"
        android:layout_below="@+id/detail7"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail9"
        android:textColor="@color/common_border_color"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_below="@+id/detail8"
        android:layout_marginTop="10dp"
        android:text="@string/timebook"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/detail99"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@+id/detail9"
        android:layout_below="@+id/detail8"
        android:layout_marginTop="10dp"
        android:text="Name"
        android:textSize="25dp"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/but1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/detail9"
        android:text="Go Back"
        android:textColor="@color/common_border_color"
        android:textSize="25dp"
        android:background="@drawable/curved_view"/>

</RelativeLayout>